Fix gallery next-prev buttons size on mobile

--- a/_sass/components/_gallery.scss
+++ b/_sass/components/_gallery.scss
@@ -36,6 +36,10 @@
   &:hover {
     opacity: 1.0;
   }
+
+  @media (max-width: 600px) {
+    width: 50%;
+  }
 }
 
 .gallery-prev {
